[gd_scene load_steps=4 format=3 uid="uid://bp1t1va6cp0ql"]

[ext_resource type="Texture2D" uid="uid://vn02leafwj68" path="res://icon.svg" id="1_5lm65"]
[ext_resource type="Script" uid="uid://y5vhidnprry6" path="res://scenes/inventory_grid_item.gd" id="2_pyp6k"]
[ext_resource type="Texture2D" uid="uid://b81hbiykdn72r" path="res://assets/inventory/empty_slot.png" id="2_xj3d1"]

[node name="InventoryGridItem" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("2_xj3d1")
expand_mode = 5
stretch_mode = 4
script = ExtResource("2_pyp6k")
empty_texture = ExtResource("2_xj3d1")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_5lm65")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
